[gd_scene load_steps=17 format=3 uid="uid://dpoaptvfw7kv5"]

[ext_resource type="Script" path="res://script/EnemyAttack/meteor.gd" id="1_3vnea"]
[ext_resource type="Texture2D" uid="uid://b4vfmchf2fuoa" path="res://assets/Attack/EnemyAttackArea.png" id="2_phl1g"]
[ext_resource type="Texture2D" uid="uid://dyuei0ad1gtyx" path="res://assets/Attack/meteors.png" id="3_o8nib"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1q2m6"]
atlas = ExtResource("3_o8nib")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv5ya"]
atlas = ExtResource("3_o8nib")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5rk1"]
atlas = ExtResource("3_o8nib")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_esg22"]
atlas = ExtResource("3_o8nib")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhkt1"]
atlas = ExtResource("3_o8nib")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w32c"]
atlas = ExtResource("3_o8nib")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgdxp"]
atlas = ExtResource("3_o8nib")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8a6r"]
atlas = ExtResource("3_o8nib")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mvfg"]
atlas = ExtResource("3_o8nib")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfb8p"]
atlas = ExtResource("3_o8nib")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y02o0"]
atlas = ExtResource("3_o8nib")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_np3dh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q2m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5rk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esg22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhkt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w32c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgdxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8a6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mvfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfb8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y02o0")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0nswn"]

[node name="Meteor" type="Area2D"]
script = ExtResource("1_3vnea")

[node name="RangeSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.0941176)
scale = Vector2(0.078, 0.078)
texture = ExtResource("2_phl1g")

[node name="AttackSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -10)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_np3dh")
frame = 10
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0nswn")

[node name="AttackMarker" type="Marker2D" parent="."]
position = Vector2(-29, -40)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AttackSprite" to="." method="_on_attack_sprite_animation_finished"]
